[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/GameDialog.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="GameArea" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="GameDialog" parent="." instance=ExtResource( 5 )]

[connection signal="game_proceeded" from="." to="HUD" method="_on_Main_game_proceeded"]
[connection signal="game_state_updated" from="." to="HUD" method="update_hud"]
[connection signal="blocks_blended" from="GameArea" to="." method="update_score"]
[connection signal="game_over" from="GameArea" to="GameDialog" method="_on_game_over"]
[connection signal="game_over" from="GameArea" to="." method="_on_game_over"]
[connection signal="game_over" from="GameArea" to="HUD" method="_on_game_over"]
[connection signal="exit_called" from="HUD" to="GameDialog" method="_on_quit"]
[connection signal="restart_called" from="HUD" to="GameDialog" method="_on_restart"]
[connection signal="dialog_canceled" from="GameDialog" to="." method="_on_GameDialog_dialog_canceled"]
[connection signal="dialog_proceeded" from="GameDialog" to="." method="_on_GameDialog_dialog_proceeded"]
